# PyThings

./: .gitignore  README.md  main.py  pyproject.toml  requirements-core.txt  requirements-enriched.txt  requirements.txt  sandbox.py
_old/entity/: abstract.py  bases.py  physical.py  relations.py
_old/foundational/: quantity.py  space.py  time.py
docs/: index.md
entity/: abstract.py  bases.py  physical.py  relations.py
examples/: advanced.py  basics.py  bespoke.py  examples.md
examples/plugins/: _plugins.md
foundational/: quantity.py  time.py
pythings/: __base__.py  __errors__.py  __init__.py  base.py  library.py  things.py
pythings/commons/: entity.py  quality.py  relation.py
pythings/commons/entity/: __init__.py  abstract.py  physical.py  relations.py
pythings/commons/foundational/: quantity.py  space.py  time.py
pythings/domains/: __init__.py
pythings/entity/: abstract.py
pythings/foundational/: quantity.py  social.py  space.py  time.py
pythings/utils/: activity.py  configure.py  utilities.py
pythings/utils/extensions/: _handler.py  what3words.py
pythings/utils/patterns/: mixins.py  singleton.py
pythings/utils/persistence/: files.py  formats.py  object.py  records.py  storage.py
src/: setup.py
src/pythings/: __base__.py  __init__.py  things.py
src/pythingy/: __errors__.py
tests/: _tests.md  core.py  examples.py  main.py  tests.py
tests/e2e/: e2e_testing.md
tests/integration/: integration_testing.md
tests/unit/: unit_testing.md
utils/: what3words.py
utils/extensions/: what3words.py
utils/persistence/: storage.py
(+26 files in other folders)
