[build-system]
requires = ["setuptools", "wheel"]
build-backend = setuptools.build_meta

[project]
name = "pythings"
version = "0.1.0"
description = ""
authors =[{}]
license = { file = "LICENSE.md"}
readme = "README.md"
dependencies = [
    "",
    ""
]

[project.urls]
Homepage = ""
Documentation = ""
Source = ""
Issues = ""