[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythingy"
version = "0.1.0"
description = "A PyForge project for managing Things and their relationships."
authors = [{name = "Aidan Hogg", email = "aidan.hogg@dirtywork.solutions"}]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = [
    "cachetools",
    "pydantic",
    "pyutile"
]

[project.urls]
Homepage = "https://open.dirtywork.solutions/pythingy"
Documentation = "https://open.dirtywork.solutions/pythingy/docs"
Source = "https://github.com/DirtyWork-Solutions/PyThingy"
Issues = "https://github.com/DirtyWork-Solutions/PyThingy/tree/main/.github/ISSUE_TEMPLATE"

[tool.setuptools.packages.find]
where = ["src"]